libqt6c/src/libqspinbox.hpp

typedef struct QDoubleSpinBox QDoubleSpinBox;
typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QSpinBox QSpinBox;
typedef struct QWidget QWidget;
QSpinBox* QSpinBox_new(QWidget* parent);
QSpinBox* QSpinBox_new2();
QMetaObject* QSpinBox_MetaObject(const QSpinBox* self);
int QSpinBox_Value(const QSpinBox* self);
libqt_string QSpinBox_Prefix(const QSpinBox* self);
void QSpinBox_SetPrefix(QSpinBox* self, const libqt_string prefix);
libqt_string QSpinBox_Suffix(const QSpinBox* self);
void QSpinBox_SetSuffix(QSpinBox* self, const libqt_string suffix);
libqt_string QSpinBox_CleanText(const QSpinBox* self);
int QSpinBox_SingleStep(const QSpinBox* self);
void QSpinBox_SetSingleStep(QSpinBox* self, int val);
int QSpinBox_Minimum(const QSpinBox* self);
void QSpinBox_SetMinimum(QSpinBox* self, int min);
int QSpinBox_Maximum(const QSpinBox* self);
void QSpinBox_SetMaximum(QSpinBox* self, int max);
void QSpinBox_SetRange(QSpinBox* self, int min, int max);
int QSpinBox_StepType(const QSpinBox* self);
void QSpinBox_SetStepType(QSpinBox* self, int stepType);
int QSpinBox_DisplayIntegerBase(const QSpinBox* self);
void QSpinBox_SetDisplayIntegerBase(QSpinBox* self, int base);
bool QSpinBox_Event(QSpinBox* self, QEvent* event);
int QSpinBox_Validate(const QSpinBox* self, libqt_string input, int* pos);
int QSpinBox_ValueFromText(const QSpinBox* self, const libqt_string text);
libqt_string QSpinBox_TextFromValue(const QSpinBox* self, int val);
void QSpinBox_Fixup(const QSpinBox* self, libqt_string str);
void QSpinBox_SetValue(QSpinBox* self, int val);
void QSpinBox_ValueChanged(QSpinBox* self, int param1);
void QSpinBox_TextChanged(QSpinBox* self, const libqt_string param1);
void QSpinBox_Delete(QSpinBox* self);